# cpp-matrix

./: CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  CMakeLists.txt.in  matrix_bench.cpp
include/: full_matrix.h  matrix.h  matrix_expr.h  matrix_ops.h  sparse_matrix.h  vectors.h
test/: CMakeLists.txt  matrix_test.cpp
